[package]
name = "eso-addon-manager"
version = "0.4.14"
authors = [
    "arviceblot <github@relay.arviceblot.com>",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/arviceblot/eso-addons"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

[workspace]
members = [".", "core", "entity", "migration"]

[[bin]]
name = "eso-addon-manager"
path = "src/main.rs"

[package.metadata.packager]
product-name = "ESO Addon Manager"
identifier = "com.arviceblot.eso-addon-manager"
icons = ["./data/icon.png"]
out-dir = "build"

[dependencies]
eframe = "0.32.0"
tokio = { version = "1.45.1", features = ["full"] }
eso-addons-core = { version = "0.1.2", path = "./core" }
strum = "0.27.1"
strum_macros = "0.27.1"
lazy_async_promise = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
dotenv = "0.15.0"
egui_extras = { version = "0.32.0", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
rfd = "0.15.4"
serde = "1.0.219"
